# byQalam

./: .gitignore  AGENTS.md  QALAM_BACKEND_GOAL_AND_ROADMAP.md  QALAM_BACKEND_PENDING_TASKS.md  QALAM_FRONTEND_GOAL_AND_ROADMAP.md  QALAM_FRONTEND_PENDING_TASKS.md  QALAM_PENDING_TASKS.md  QALAM_PRODUCT_ARCHITECTURE_PLAN.md  Qalam Project.html  qalam_world_class_mvp.html
backend/: .dockerignore  .env.example  .gitignore  BACKUP_STRATEGY.md  Dockerfile  README.md  SECURITY_REVIEW.md  SUPABASE_SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260510_0001_initial_foundation.py  20260510_0002_preferences_onboarding.py  20260510_0003_posts_workflow.py  20260510_0004_ai_generation.py  20260510_0005_linkedin_integration.py  20260510_0006_workspace_invites.py  20260510_0007_audit_logs.py  20260510_0008_notifications.py  20260510_0009_dead_letter_jobs.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: api_errors.py  auth.py  config.py  logging.py  middleware.py  rate_limit.py  redis.py  security.py  sentry.py
backend/app/db/: base.py  health.py  session.py
backend/app/schemas/: billing.py  generation.py  health.py  linkedin.py  me.py  media.py  plan.py  post.py  preferences.py  usage.py  (+2 more)
backend/tests/: test_ai_generation.py  test_api_errors.py  test_auth.py  test_config.py  test_dead_letters.py  test_linkedin.py  test_media.py  test_notifications.py  test_plan_seeds.py  test_posts.py  test_preferences.py  test_rate_limit.py  test_sentry.py  test_usage.py  test_workspaces.py
(+118 files in other folders)
