[project]
name = "qalam-backend"
version = "0.1.0"
description = "FastAPI backend for Qalam LinkedIn content automation SaaS"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.30.0",
  "celery[redis]>=5.4.0",
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "pyjwt[crypto]>=2.9.0",
  "python-multipart>=0.0.12",
  "redis>=5.1.0",
  "sentry-sdk>=2.20.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]
